2006-02-27  Johannes Schmid <jhs@gnome.org>
	
	* plugins/sourceview/sourceview.c: Implemented markers and fixed several crashers
	* plugins/file-manager/an_file_view.c
	plugins/file-manager/plugin.h:  Added tooltips
	* plugins/symbol-browser/an_symbol_view.h: Added tooltips

2006-02-26  Naba Kumar  <naba@gnome.org>

	* plugins/build-basic-autotools/anjuta-build-basic-autotools-plugin.glade,
	plugins/build-basic-autotools/build-basic-autotools.c,
	plugins/build-basic-autotools/build-basic-autotools.h,
	plugins/build-basic-autotools/executer.c,
	plugins/message-view/anjuta-message-manager-plugin.glade: Moved enable/
	disable indicator highlights preferences from message manager to
	build plugin. Implemented message indicator highlights in build tool.
	
	* plugins/editor/text_editor.c: Fixed indicators.

2006-02-26  Johannes Schmid <jhs@gnome.org>

	* plugins/sourceview/sourceview.c:
	- Fixed some bugs
	- Added markers
	* plugins/subversion/svn_auth.c:
	Fixed username/password authentification but there might be a memory corruption

2006-02-26  Naba Kumar  <naba@gnome.org>

	Patch from Anjuta Khongbantabam <k_anjuta@yahoo.com>:
	* libanjuta/anjuta-encodings.c, libanjuta/anjuta-launcher.c,
	libanjuta/anjuta-launcher.h: Added documentation.

2006-02-24  Naba Kumar  <naba@gnome.org>

	* plugins/editor/text_editor.c: Fixed change in API in
	IAnjutaEditorSelection::set().
	
2006-02-24  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/sourceview/sourceview.c, plugins/search/plugin.c,
	plugins/search/search-replace.c, plugins/search/search-replace_backend.c,
	libanjuta/interfaces/libanjuta.idl :
	Search in sourceview editor (Select in buffer).
 

2006-02-23  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* plugins/sourceview/sourceview.c :
	Fixed Replace, to_upper, to_lower.
	
	* plugins/search/search-replace_backend.c :
	Renamed header name.

2006-02-22  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-plugin-description.c,